--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "new-vite-app",
+  "name": "rubiks",
   "version": "0.1.0",
-  "homepage": "https://USERNAME.github.io/REPO_NAME",
+  "homepage": "https://stijnmeershoek.github.io/rubiks",
   "private": true,
   "scripts": {
     "deploy": "npm run build && git add build -f && git commit -m 'deploy' && git subtree push --prefix build origin gh-pages",
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "sr-visualizer": "^1.0.13"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
