--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "rubiks",
   "version": "0.1.0",
-  "homepage": "https://stijnmeershoek.github.io/rubiks",
   "private": true,
   "scripts": {
-    "deploy": "npm run build && git add build -f && git commit -m 'deploy' && git subtree push --prefix build origin gh-pages",
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
@@ -12,6 +10,7 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "sr-visualizer": "^1.0.13"
   },
   "devDependencies": {
