--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "rubiks",
   "version": "0.1.0",
+  "homepage": "https://stijnmeershoek.github.io/rubiks",
   "private": true,
   "scripts": {
+    "deploy": "npm run build && git add build -f && git commit -m 'deploy' && git subtree push --prefix build origin gh-pages",
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
