--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://stijnmeershoek.github.io/rubiks",
   "private": true,
   "scripts": {
-    "deploy": "npm run build && git add build -f && git commit -m 'deploy' && git subtree push --prefix build origin gh-pages",
+    "deploy": "npm run build && git add build -f && git commit -m 'deploy' && git subtree push --prefix build origin gh-pages --force",
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
