--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
+    "scrambo": "^0.3.0",
     "sr-visualizer": "^1.0.13"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/scrambo": "^0.3.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.5",
     "cssnano": "^5.1.7",
