--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,20 @@
 {
-  "short_name": "New App",
-  "name": "New App",
-  "icons": [],
-  "start_url": ".",
+  "name": "CubeAlgs",
+  "short_name": "CubeAlgs",
+  "icons": [
+    {
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/android-chrome-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    }
+  ],
+  "theme_color": "#123a53",
+  "background_color": "#123a53",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "start_url": "/"
 }
