--- a/package.json
+++ b/package.json
@@ -4,22 +4,21 @@
   "homepage": "https://stijnmeershoek.github.io/rubiks",
   "private": true,
   "scripts": {
-    "deploy": "npm run build && git add build -f && git commit -m 'deploy' && git subtree push --prefix build origin gh-pages --force",
+    "deploy": "npm run build && git add build -f && git commit -m 'deploy' && git subtree push --prefix build origin gh-pages",
     "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "cubing": "^0.28.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
-    "scrambo": "^0.3.0",
     "sr-visualizer": "^1.0.13"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/scrambo": "^0.3.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.5",
     "cssnano": "^5.1.7",
