--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cubing": "^0.28.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-lottie-player": "^1.4.3",
     "react-router-dom": "^6.3.0",
     "sr-visualizer": "^1.0.13"
   },
